# models/compat/wakatime/v1/heartbeat.go
@@ -1,6 +1,8 @@
 package v1
 
 import (
+	"strconv"
+
 	"github.com/muety/wakapi/models"
 )
 
@@ -19,11 +21,34 @@ type HeartbeatEntry struct {
 	IsWrite       bool              `json:"is_write"`
 	Language      string            `json:"language"`
 	Project       string            `json:"project"`
-	Time          models.CustomTime `json:"time"`
+	Time          float64           `json:"time"`
 	Type          string            `json:"type"`
 	UserId        string            `json:"user_id"`
 	MachineNameId string            `json:"machine_name_id"`
 	UserAgentId   string            `json:"user_agent_id"`
 	CreatedAt     models.CustomTime `json:"created_at"`
-	ModifiedAt    models.CustomTime `json:"created_at"`
+	ModifiedAt    models.CustomTime `json:"created_at",omitempty`
+}
+
+func ToHeartbeatEntry(entries []*models.Heartbeat) []HeartbeatEntry {
+	out := make([]HeartbeatEntry, len(entries))
+	for i := 0; i < len(entries); i++ {
+		entry := entries[i]
+		out[i] = HeartbeatEntry{
+			Id:            strconv.FormatUint(entry.ID, 10),
+			Branch:        entry.Branch,
+			Category:      entry.Category,
+			Entity:        entry.Entity,
+			IsWrite:       entry.IsWrite,
+			Language:      entry.Language,
+			Project:       entry.Project,
+			Time:          float64(entry.Time.T().Unix()),
+			Type:          entry.Type,
+			UserId:        entry.UserID,
+			MachineNameId: entry.Machine,
+			UserAgentId:   entry.UserAgent,
+			CreatedAt:     entry.CreatedAt,
+		}
+	}
+	return out
 }
