# static/docs/swagger.json
@@ -145,6 +145,48 @@
             }
         },
         "/compat/wakatime/v1/users/{user}/heartbeats": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "heartbeat"
+                ],
+                "summary": "Get heartbeats of user for specified date",
+                "operationId": "get-heartbeats",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Date",
+                        "name": "date",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.HeartbeatEntry"
+                        }
+                    },
+                    "400": {
+                        "description": "bad date",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -168,6 +210,13 @@
                         "schema": {
                             "$ref": "#/definitions/models.Heartbeat"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -204,6 +253,13 @@
                                 "$ref": "#/definitions/models.Heartbeat"
                             }
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -848,6 +904,13 @@
                         "schema": {
                             "$ref": "#/definitions/models.Heartbeat"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -884,6 +947,13 @@
                                 "$ref": "#/definitions/models.Heartbeat"
                             }
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -952,6 +1022,13 @@
                         "schema": {
                             "$ref": "#/definitions/models.Heartbeat"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -988,6 +1065,13 @@
                                 "$ref": "#/definitions/models.Heartbeat"
                             }
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username (or current)",
+                        "name": "user",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1079,6 +1163,13 @@
         "models.Summary": {
             "type": "object",
             "properties": {
+                "branches": {
+                    "description": "branches are not persisted, but calculated at runtime in case a project filter is applied",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.SummaryItem"
+                    }
+                },
                 "editors": {
                     "type": "array",
                     "items": {
@@ -1207,6 +1298,50 @@
                 }
             }
         },
+        "v1.HeartbeatEntry": {
+            "type": "object",
+            "properties": {
+                "branch": {
+                    "type": "string"
+                },
+                "category": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "entity": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "is_write": {
+                    "type": "boolean"
+                },
+                "language": {
+                    "type": "string"
+                },
+                "machine_name_id": {
+                    "type": "string"
+                },
+                "project": {
+                    "type": "string"
+                },
+                "time": {
+                    "type": "number"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "user_agent_id": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "v1.Project": {
             "type": "object",
             "properties": {
@@ -1235,6 +1370,12 @@
         "v1.StatsData": {
             "type": "object",
             "properties": {
+                "branches": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/v1.SummariesEntry"
+                    }
+                },
                 "daily_average": {
                     "type": "number"
                 },
@@ -1310,6 +1451,12 @@
         "v1.SummariesData": {
             "type": "object",
             "properties": {
+                "branches": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/v1.SummariesEntry"
+                    }
+                },
                 "categories": {
                     "type": "array",
                     "items": {
